add get template function
