# app/specs/swagger.yaml
@@ -106,6 +106,34 @@ paths:
         200:
           description: 发送成功
 
+  /robot/template:
+    get:
+      summary: 机器人消息通知模板列表
+      operationId: api.apiRobot.list_tmpl
+      tags:
+        - "msg"
+      responses:
+        200:
+          description: 成功获取模板列表
+
+  /robot/template/{template_name}:
+    get:
+      summary: 机器人消息通知模板列表
+      operationId: api.apiRobot.get_tmpl
+      tags:
+        - "msg"
+      parameters:
+        - name: template_name
+          description: 消息模板名称，模板都存放在 template 目录中
+          in: path
+          required: true
+          schema:
+            type: string
+            example: dt-new-issue
+      responses:
+        200:
+          description: 成功获取模板内容
+
   /pm/jira/comment:
     post:
       summary: JIRA 添加评论
